--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -154,12 +154,13 @@ h6 {
 .header .header-container {
   background: var(--surface-color);
   border-radius: 50px;
-  padding: 5px 25px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  padding: 5px 5px;
+  box-shadow: 12px 2px 15px rgba(32, 32, 32, 0.3);
 }
 
 .scrolled .header .header-container {
-  background: color-mix(in srgb, var(--surface-color), transparent 5%);
+  /* background: color-mix(in srgb, var(--surface-color), transparent 5%); */
+  background-color: #FFF;
 }
 
 .header .logo {
@@ -182,7 +183,7 @@ h6 {
 .header .btn-getstarted,
 .header .btn-getstarted:focus {
   color: var(--contrast-color);
-  background: var(--accent-color);
+  /* background: var(--accent-color); */
   font-size: 14px;
   padding: 8px 20px;
   margin: 0 0 0 30px;
@@ -190,11 +191,11 @@ h6 {
   transition: 0.3s;
 }
 
-.header .btn-getstarted:hover,
+/* .header .btn-getstarted:hover,
 .header .btn-getstarted:focus:hover {
   color: var(--contrast-color);
   background: color-mix(in srgb, var(--accent-color), transparent 15%);
-}
+} */
 
 @media (max-width: 1200px) {
   .header {
@@ -2422,6 +2423,7 @@ section,
   width: 30px;
   position: relative;
   top: -1px;
+  border-radius: 20px;
 }
 .tel {
   background: #eee;
@@ -2500,3 +2502,96 @@ section,
     position: relative;
     top: -1px;
 }
+
+#loading{
+	background-color: var(--accent-color);
+	height: 100%;
+	width: 100%;
+	position: fixed;
+	z-index: 999;
+	margin-top: 0px;
+	top: 0px;
+}
+#loading-center{
+	width: 100%;
+	height: 100%;
+	position: relative;
+	}
+#loading-center-absolute {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	height: 200px;
+	width: 200px;
+	margin-top: -100px;
+	margin-left: -100px;
+	-ms-transform: rotate(-135deg); 
+   	-webkit-transform: rotate(-135deg); 
+    transform: rotate(-135deg);
+
+}
+.object{
+
+	-moz-border-radius: 50% 50% 50% 50%;
+	-webkit-border-radius: 50% 50% 50% 50%;
+	border-radius: 50% 50% 50% 50%;
+	position: absolute;
+	border-top: 5px solid #FFF;
+	border-bottom: 5px solid transparent;
+	border-left:  5px solid #FFF;
+	border-right: 5px solid transparent;
+	
+	-webkit-animation: animate 2s infinite;
+	animation: animate 2s infinite;	
+
+	}
+
+
+#object_one{
+	left: 75px;
+	top: 75px;
+	width: 50px;
+	height: 50px;
+	}
+							
+#object_two{
+	left: 65px;
+	top: 65px;
+	width: 70px;
+	height: 70px;
+	-webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s;
+	}
+		
+#object_three{
+	left: 55px;
+	top: 55px;
+	width: 90px;
+	height: 90px;
+	-webkit-animation-delay: 0.4s;
+    animation-delay: 0.4s;
+	}
+#object_four{
+	left: 45px;
+	top: 45px;
+	width: 110px;
+	height: 110px;
+	-webkit-animation-delay: 0.6s;
+    animation-delay: 0.6s;
+	
+	}	
+
+
+	@keyframes animate {
+	
+		50% {
+		
+			-ms-transform: rotate(360deg) scale(0.8); 
+			   -webkit-transform: rotate(360deg) scale(0.8); 
+			transform: rotate(360deg) scale(0.8); 
+		  }	
+			
+	}
+  .sitename {
+    padding: 8px 20px;
+  }
