--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -834,11 +834,12 @@ section,
   padding: 1rem;
   border-radius: 10px;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-  max-width: 300px;
+  max-width: 350px;
+}
+.hero-image-custom {
   animation: float-badge 3s ease-in-out infinite;
   will-change: transform;
 }
-
 .hero .customers-badge .customer-avatars {
   display: flex;
   align-items: center;
@@ -1556,18 +1557,21 @@ section,
 # Clients Section
 --------------------------------------------------------------*/
 .clients .swiper-slide img {
-  opacity: 0.5;
+  /* opacity: 0.5;
   transition: 0.3s;
-  filter: grayscale(100);
+  filter: grayscale(100); */
+  /* width: fit-content; */
+  width: 100%;
 }
 
-.clients .swiper-slide img:hover {
+/* .clients .swiper-slide img:hover {
   filter: none;
   opacity: 1;
-}
+} */
 
 .clients .swiper-wrapper {
-  height: auto;
+  /* height: auto; */
+  height: min-content;
 }
 
 .clients .swiper-pagination {
@@ -2057,6 +2061,9 @@ section,
 @media (max-width: 767.98px) {
   .contact .info-box h3 {
     font-size: 1.75rem;
+  }
+  .swiper-custom {
+    margin-top: 80px;
   }
 }
 
